crates/herder-tui/src/views/snapshots/herder_tui__views__tests__fork_paired.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, 100, 24).backend()"
---
" herder        inbox 0 « │  chat   tasks   prs   term                                               "
"                         │                                                                          "
" machines     by machine │                                                                          "
"  ○ vault          ┌ fork · app · docs ────────────────────────────────── esc ┐                     "
"    ├ ○ devbox     │                                                          │                     "
"    │ ├ ○ app · …  │  ✗ on laptop · offline, last seen 2h 5m ago              │                     "
"    │ └ ○ app · …  │                                                          │                     "
"    └ ○ laptop   of│  fork onto                                               │                     "
"▶     └ ○ app · doc│ ▶ ● devbox                                               │                     "
"  · devbox         │                                                          │                     "
"                   │  enter forks it onto devbox                              │                     "
"                   │                                                          │                     "
"                   │  The fork is a new session with this one's history,      │                     "
"                   │  in a new worktree from its last checkpoint. This one    │                     "
"                   │  stays as it is.                                         │                     "
"                   │                                                          │                     "
"                   │  j/k host  enter fork  esc close                         │                     "
"                   │                                                          │                     "
"                   └──────────────────────────────────────────────────────────┘                     "
"                         │                                                                          "
" ─────────────────────── │  laptop is offline · F fork                                              "
" + new            ≡ menu │                                                                          "
"─────────────────────────┴───────────────────────────────────────────────────────────────────────── "
" esc close                                                                       ● vault  ● devbox  "
