crates/herder-tui/src/views/snapshots/herder_tui__views__tests__help_lists_the_keys.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, 80, 20).backend()"
---
"┌ sessions ──────────────────┐┌────────────────────────────────────────────────┐"
"│● box (4)                   ││                                                │"
"│ needs you app · herder/api ││                                                │"
"│ running   └ write the tests││                                                │"
"│ error     ┌ keys ─────────────────────────────────────────────────┐          │"
"│ idle      │                                                       │          │"
"│           │ j / k, ↓ / ↑  move, or scroll the transcript          │          │"
"│           │ Enter, l      open the selected session               │          │"
"│           │ Tab           switch between sessions and transcript  │          │"
"│           │ Esc, h        back to the sessions                    │r.        │"
"│           │ PgUp / PgDn   scroll a page (also Ctrl-u / Ctrl-d)    │          │"
"│           │ g / G         first / last; G follows the transcript  │          │"
"│           │ r             reconnect now                           │          │"
"│           │ ?             show or hide this help                  │          │"
"│           │ q, Ctrl-c     quit                                    │          │"
"│           │                                                       │          │"
"│           └─────────────────── any key closes ────────────────────┘          │"
"│                            ││                                                │"
"└────────────────────────────┘└────────────────────────────────────────────────┘"
" ● box connected                                                 ? help  q quit "
