crates/herder-tui/src/views/snapshots/herder_tui__views__tests__inbox_160x40.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" herder        inbox 2 « │ inbox · 2 waiting on you                                                                               every machine · newest first  "
"                         │                                                                                                                                      "
" machines     by machine │ ▶ ? question · write the tests  app · api › write the tests                                                               box · 2m   "
"  ◉ box                3 │     escalated: the primary session left it to you                                                                                    "
"▶   ├ ◉ app · api      1 │     primary's note: “Production uses 8080 behind the proxy; your call.”                                                              "
"    │ ├ ◉ write the …  ? │     Which port should the server use?                                                                                                "
"    │ └ ✗ document it    │       1 8080                                                                                                                         "
"    └ ◉ app · fix-lo…  ! │       2 3000                                                                                                                         "
"                         │                                                                                                                                      "
" ─────────────────────── │   △ approval · app · fix-login                                                                                            box · 2m   "
" attention      priority │     Bash: cargo publish                                                                                                              "
"  ◉ api · app · box      │                                                                                                                                      "
"  ◉ write the tests      │                                                                                                                                      "
"  ◉ fix-login · app      │                                                                                                                                      "
"  ✗ document it · app    │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
"                         │                                                                                                                                      "
" ─────────────────────── │                                                                                                                                      "
" + new            ≡ menu │                                                                                                                                      "
"─────────────────────────┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── "
"  NAVIGATE   j/k move  1-9 pick  y/n allow/deny  enter answer  l open  esc back                                                                          ● box  "
