crates/herder-tui/src/views/snapshots/herder_tui__views__tests__inbox_45x40.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" inbox 2                    < back  | switch "
" ! 3 need you  x 1 error            |    !   "
"                                             "
" inbox - 2 waiting on you                    "
" > question box - app - herder/api > write   "
"     Which port should the server use?       "
"     1. 8080                                 "
"     2. 3000                                 "
"     the primary session left it to you      "
"     the primary says: Production uses 8080  "
"     behind the proxy; your call.            "
"                                             "
"   approval box - app - herder/fix-login     "
"     Bash: cargo publish                     "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
" y/n - 1-9 - Enter answer - l open - < back  "
" 1 8080   2 3000   > answer   l open         "
