crates/herder-tui/src/views/snapshots/herder_tui__views__tests__inbox_answer.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: "render(&mut app, 110, 20).backend()"
---
" herder                                                                                           inbox 2  +  "
"┌ sessions ────────────────────────┐┌ inbox · 2 waiting on you ─────────────────────────────────────────────┐ "
"│● box (4)                         ││▶ question box · app · herder/api › write the tests                    │ "
"│ needs you ▾ app · herder/… (2) !1││    Which port should the server use?                                  │ "
"│ question  └ write the tests      ││    1. 8080                                                            │ "
"│ error     └ document it          ││    2. 3000                                                            │ "
"│ approve?  app · herder/fix-login ││    the primary session left it to you                                 │ "
"│                                  ││    the primary says: Production uses 8080 behind the proxy; your call.│ "
"│                                  ││                                                                       │ "
"│                                  ││  approval box · app · herder/fix-login                                │ "
"│                                  ││    Bash: cargo publish                                                │ "
"│                                  ││                                                                       │ "
"│                                  ││                                                                       │ "
"│                                  ││                                                                       │ "
"│                                  ││                                                                       │ "
"│                                  │└────────────────────────────────────────────── Enter send · Esc cancel ┘ "
"│                                  │┌ answer · write the tests ─────────────────────────────────────────────┐ "
"│                                  ││9000                                                                   │ "
"└──────────────────────────────────┘└───────────────────────────────────────────────────────────────────────┘ "
" 2 waiting on you · I inbox  ● box connected                                                  ? help  q quit  "
