crates/herder-tui/src/views/snapshots/herder_tui__views__tests__inbox_answer_100x30.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" herder        inbox 2 « │ inbox · 2 waiting on you                   every machine · newest first  "
"                         │                                                                          "
" machines     by machine │ ▶ ? question · write the tests  app · api › write the tests   box · 2m   "
"  ◉ box                3 │     escalated: the primary session left it to you                        "
"▶   ├ ◉ app · api      1 │     primary's note: “Production uses 8080 behind the proxy; your         "
"    │ ├ ◉ write the …  ? │     call.”                                                               "
"    │ └ ✗ document it    │     Which port should the server use?                                    "
"    └ ◉ app · fix-lo…  ! │       1 8080                                                             "
"                         │       2 3000                                                             "
" ─────────────────────── │                                                                          "
" attention      priority │   △ approval · app · fix-login                                box · 2m   "
"  ◉ api · app · box      │     Bash: cargo publish                                                  "
"  ◉ write the tests      │                                                                          "
"  ◉ fix-login · app      │                                                                          "
"  ✗ document it · app    │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │                                                                          "
"                         │ ┃ 9000                                                                   "
"                         │ ┃                                                                        "
" ─────────────────────── │ ┃ answer · write the tests                                               "
" + new            ≡ menu │ ╹                                                                        "
"─────────────────────────┴───────────────────────────────────────────────────────────────────────── "
"  NAVIGATE   enter send  esc cancel                                                          ● box  "
