crates/herder-tui/src/views/snapshots/herder_tui__views__tests__inbox_answer_45x40.snap
---
source: crates/herder-tui/src/views/tests.rs
expression: terminal.backend()
---
" inbox 2                    < back  | switch "
" ! 3 need you  x 1 error            |    !   "
"                                             "
"> ? question - write the tests     box - 2m  "
"    app - api > write the tests              "
"    escalated: the primary session left it   "
"    to you                                   "
"    primary's note: "Production uses 8080    "
"    behind the proxy; your call."            "
"    Which port should the server use?        "
"      1 8080                                 "
"      2 3000                                 "
"                                             "
"  ^ approval - app - fix-login     box - 2m  "
"    Bash: cargo publish                      "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"| 9000                                       "
"|                                            "
"| answer - write the tests                   "
"`------------------------------------------- "
" > send   esc cancel                         "
